modules/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec: 
  selector:
    matchLabels:
      app: goserver
  replicas: 1
  template:
    metadata:
      labels:
        app: goserver
    spec: 
      containers:
        - name: goserver
          image: "mapx18/k8s-go:v6"

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 3
            failureThreshold: 30
          
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 20

          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
              readOnly: true

      volumes: 
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"

          # FIRST METHOD:
          # env: 
          #   - name: NAME
          #     valueFrom:
          #       configMapKeyRef:
          #         name: goserver-env
          #         key: NAME

          # SECOND METHOD:
          # envFrom:
          #   - configMapRef:
          #       name: goserver-env
