modules/kubernetes/base/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goserver
  labels:
    app: goserver
spec: 
  containers:
    - name: goserver
      image: "mapx18/k8s-go:latest"
