modules/kubernetes/base/service-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort 
  ports:
    - name: goserver-service
      port: 80
      targetPort: 8000
      nodePort: 30001
      protocol: TCP
