modules/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
   - host: "ingress.fullcycle.com.br"
     http: 
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: goserver-service
            servicePort: 80
  tls:
  - hosts:
    - "ingress.fullcycle.com.br"
    secretName: ingress-tls
